# pydiyanet

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
pydiyanet/: __init__.py  client.py  exceptions.py
